IT WAS FREAKING WHITESPACE I WIN THE INTERNET

--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,7 @@
 <link rel="stylesheet" href="/styles.css"/>
 <body>
 
-<div id="app">
-¡HTML!
-</div>
+<div id="app">¡HTML!</div>
 
 <script>
 window.ROUTER_PROPS = ¡DATA!;
