--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,6 @@
 <!doctype html public "restroom">
 <meta charset="utf-8"/>
-<title>My Amazing Application</title>
+<title>React Router Mega Demo</title>
 <link rel="stylesheet" href="/styles.css"/>
 <body>
 
