--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
 <div id="app">¡HTML!</div>
 
 <script>
-window.ROUTER_PROPS = ¡DATA!;
+__DATA__ = ¡DATA!;
 </script>
 
 <script src="/js/main.js"></script>
